--- a/app.html
+++ b/app.html
@@ -9,29 +9,30 @@
 </head>
 <body>
 
-<!-- Navigation Bar -->
+<!-- Navigation Bar with Buttons -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="index.html">Smart Step Tutoring</a>
+    <a class="navbar-brand" href="#">Smart Step Tutoring</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="index.html">What We Offer</a>
+                <button class="btn btn-link text-white" onclick="window.location.href='index.html'">What We Offer</button>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="team.html">Meet the Team</a>
+                <button class="btn btn-link text-white" onclick="window.location.href='team.html'">Meet the Team</button>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="app.html">Our iOS App</a>
+                <button class="btn btn-link text-white" onclick="window.location.href='app.html'">Our iOS App</button>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact Us</a>
+                <button class="btn btn-link text-white" onclick="window.location.href='contact.html'">Contact Us</button>
             </li>
         </ul>
     </div>
 </nav>
+
 
 <!-- Main Content -->
 <div class="container mt-5">
