--- a/index.html
+++ b/index.html
@@ -1,26 +1,3 @@
-<!-- Navigation Bar with Buttons -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">Smart Step Tutoring</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <button class="btn btn-link text-white" onclick="window.location.href='index.html'">What We Offer</button>
-            </li>
-            <li class="nav-item">
-                <button class="btn btn-link text-white" onclick="window.location.href='team.html'">Meet the Team</button>
-            </li>
-            <li class="nav-item">
-                <button class="btn btn-link text-white" onclick="window.location.href='app.html'">Our iOS App</button>
-            </li>
-            <li class="nav-item">
-                <button class="btn btn-link text-white" onclick="window.location.href='contact.html'">Contact Us</button>
-            </li>
-        </ul>
-    </div>
-</nav>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -29,24 +6,101 @@
     <title>What We Offer - Smart Step Tutoring</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <style>
+        /* Additional Page-Specific Styling */
+        body {
+            background: linear-gradient(to right, #007bff, #00c6ff);
+            color: white;
+            font-family: 'Arial', sans-serif;
+        }
+
+        h1 {
+            font-size: 3rem;
+            font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            margin-bottom: 20px;
+        }
+
+        .lead {
+            font-size: 1.5rem;
+            margin-bottom: 40px;
+        }
+
+        .card {
+            background: white;
+            color: #333;
+            border: none;
+            border-radius: 15px;
+            overflow: hidden;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .card:hover {
+            transform: scale(1.05);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+        }
+
+        .card-title {
+            font-size: 1.8rem;
+            font-weight: bold;
+            color: #007bff;
+        }
+
+        .btn-primary {
+            background-color: #007bff;
+            border-color: #0056b3;
+            font-size: 1.2rem;
+            font-weight: bold;
+            padding: 10px 20px;
+            border-radius: 50px;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+
+        .btn-primary:hover {
+            background-color: #0056b3;
+            transform: translateY(-2px);
+        }
+    </style>
 </head>
 <body>
 
-<!-- Include Header -->
-<div class="container">
-    <header>
-        <?php include 'header.html'; ?>
-    </header>
+<!-- Navigation Bar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand" href="#">Smart Step Tutoring</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <button class="btn nav-btn text-white" onclick="window.location.href='index.html'">What We Offer</button>
+            </li>
+            <li class="nav-item">
+                <button class="btn nav-btn text-white" onclick="window.location.href='team.html'">Meet the Team</button>
+            </li>
+            <li class="nav-item">
+                <button class="btn nav-btn text-white" onclick="window.location.href='app.html'">Our iOS App</button>
+            </li>
+            <li class="nav-item">
+                <button class="btn nav-btn text-white" onclick="window.location.href='contact.html'">Contact Us</button>
+            </li>
+        </ul>
+    </div>
+</nav>
 
+<!-- Page Content -->
+<div class="container text-center">
     <section class="content-section">
-        <h1 class="text-center mt-4">What We Offer</h1>
-        <p class="lead text-center">Our tutoring services cover a wide range of subjects, including Math, Science, English, and Test Preparation.</p>
-        <div class="row">
+        <h1 class="mt-5">What We Offer</h1>
+        <p class="lead">Explore our comprehensive tutoring services designed to help you excel in your academic journey.</p>
+        <div class="row justify-content-center">
             <div class="col-md-4">
                 <div class="card shadow-sm">
                     <div class="card-body">
                         <h3 class="card-title">Math</h3>
-                        <p>From basic arithmetic to advanced calculus, we cover it all.</p>
+                        <p>Master everything from basic arithmetic to advanced calculus with personalized support.</p>
+                        <button class="btn btn-primary">Learn More</button>
                     </div>
                 </div>
             </div>
@@ -54,7 +108,8 @@
                 <div class="card shadow-sm">
                     <div class="card-body">
                         <h3 class="card-title">Science</h3>
-                        <p>Biology, Chemistry, Physics, and more, taught by experts in the field.</p>
+                        <p>Delve into Biology, Chemistry, and Physics with expert guidance and tailored resources.</p>
+                        <button class="btn btn-primary">Learn More</button>
                     </div>
                 </div>
             </div>
@@ -62,7 +117,8 @@
                 <div class="card shadow-sm">
                     <div class="card-body">
                         <h3 class="card-title">English</h3>
-                        <p>Improving literacy, comprehension, and writing skills for all levels.</p>
+                        <p>Enhance your literacy, comprehension, and writing skills for long-term success.</p>
+                        <button class="btn btn-primary">Learn More</button>
                     </div>
                 </div>
             </div>
@@ -70,6 +126,7 @@
     </section>
 </div>
 
+<!-- Scripts -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
