--- a/app.html
+++ b/app.html
@@ -6,10 +6,54 @@
     <title>Our iOS App - Smart Step Tutoring</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <style>
+        body {
+            background: linear-gradient(to right, #007bff, #00c6ff);
+            color: white;
+            font-family: 'Arial', sans-serif;
+        }
+
+        h1 {
+            font-size: 3rem;
+            font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            margin-bottom: 20px;
+        }
+
+        .lead {
+            font-size: 1.5rem;
+            margin-bottom: 40px;
+        }
+
+        .card {
+            background: white;
+            color: #333;
+            border: none;
+            border-radius: 15px;
+            overflow: hidden;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .card:hover {
+            transform: scale(1.05);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+        }
+
+        .card-title {
+            font-size: 1.8rem;
+            font-weight: bold;
+            color: #007bff;
+        }
+
+        footer {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
 
-<!-- Navigation Bar with Buttons -->
+<!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <a class="navbar-brand" href="#">Smart Step Tutoring</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,24 +62,23 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <button class="btn btn-link text-white" onclick="window.location.href='index.html'">What We Offer</button>
+                <button class="btn nav-btn text-white" onclick="window.location.href='index.html'">What We Offer</button>
             </li>
             <li class="nav-item">
-                <button class="btn btn-link text-white" onclick="window.location.href='team.html'">Meet the Team</button>
+                <button class="btn nav-btn text-white" onclick="window.location.href='team.html'">Meet the Team</button>
             </li>
             <li class="nav-item">
-                <button class="btn btn-link text-white" onclick="window.location.href='app.html'">Our iOS App</button>
+                <button class="btn nav-btn text-white" onclick="window.location.href='app.html'">Our iOS App</button>
             </li>
             <li class="nav-item">
-                <button class="btn btn-link text-white" onclick="window.location.href='contact.html'">Contact Us</button>
+                <button class="btn nav-btn text-white" onclick="window.location.href='contact.html'">Contact Us</button>
             </li>
         </ul>
     </div>
 </nav>
 
-
 <!-- Main Content -->
-<div class="container mt-5">
+<div class="container text-center mt-5">
     <h1 class="text-center mb-4">Our Upcoming iOS App</h1>
     <p class="lead text-center">We're excited to introduce our upcoming iOS app designed to enhance the tutoring experience for our students and instructors.</p>
     
