--- a/team.html
+++ b/team.html
@@ -1,28 +1,3 @@
-<!-- Navigation Bar with Buttons -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">Smart Step Tutoring</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <button class="btn btn-link text-white" onclick="window.location.href='index.html'">What We Offer</button>
-            </li>
-            <li class="nav-item">
-                <button class="btn btn-link text-white" onclick="window.location.href='team.html'">Meet the Team</button>
-            </li>
-            <li class="nav-item">
-                <button class="btn btn-link text-white" onclick="window.location.href='app.html'">Our iOS App</button>
-            </li>
-            <li class="nav-item">
-                <button class="btn btn-link text-white" onclick="window.location.href='contact.html'">Contact Us</button>
-            </li>
-        </ul>
-    </div>
-</nav>
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -31,52 +6,122 @@
     <title>Meet the Team - Smart Step Tutoring</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <style>
+        body {
+            background: linear-gradient(to right, #007bff, #00c6ff);
+            color: white;
+            font-family: 'Arial', sans-serif;
+        }
+
+        h1 {
+            font-size: 3rem;
+            font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            margin-bottom: 20px;
+        }
+
+        .lead {
+            font-size: 1.5rem;
+            margin-bottom: 40px;
+        }
+
+        .card {
+            background: white;
+            color: #333;
+            border: none;
+            border-radius: 15px;
+            overflow: hidden;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .card:hover {
+            transform: scale(1.05);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+        }
+
+        .card-title {
+            font-size: 1.8rem;
+            font-weight: bold;
+            color: #007bff;
+        }
+
+        footer {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
 
-<!-- Include Header -->
-<div class="container">
-    <header>
-        <?php include 'header.html'; ?>
-    </header>
+<!-- Navigation Bar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand" href="#">Smart Step Tutoring</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <button class="btn nav-btn text-white" onclick="window.location.href='index.html'">What We Offer</button>
+            </li>
+            <li class="nav-item">
+                <button class="btn nav-btn text-white" onclick="window.location.href='team.html'">Meet the Team</button>
+            </li>
+            <li class="nav-item">
+                <button class="btn nav-btn text-white" onclick="window.location.href='app.html'">Our iOS App</button>
+            </li>
+            <li class="nav-item">
+                <button class="btn nav-btn text-white" onclick="window.location.href='contact.html'">Contact Us</button>
+            </li>
+        </ul>
+    </div>
+</nav>
 
-    <section class="content-section">
-        <h1 class="text-center mt-4">Meet the Team</h1>
-        <p class="lead text-center">Our team consists of highly qualified and passionate tutors.</p>
-        <div class="row">
-            <!-- Team Member 1 -->
-            <div class="col-md-4">
-                <div class="card shadow-sm">
-                    <img src="images/team1.jpg" class="card-img-top" alt="Team Member 1">
-                    <div class="card-body">
-                        <h3 class="card-title">John Doe</h3>
-                        <p>Math Specialist</p>
-                    </div>
-                </div>
-            </div>
-            <!-- Team Member 2 -->
-            <div class="col-md-4">
-                <div class="card shadow-sm">
-                    <img src="images/team2.jpg" class="card-img-top" alt="Team Member 2">
-                    <div class="card-body">
-                        <h3 class="card-title">Jane Smith</h3>
-                        <p>Science Expert</p>
-                    </div>
-                </div>
-            </div>
-            <!-- Team Member 3 -->
-            <div class="col-md-4">
-                <div class="card shadow-sm">
-                    <img src="images/team3.jpg" class="card-img-top" alt="Team Member 3">
-                    <div class="card-body">
-                        <h3 class="card-title">Michael Lee</h3>
-                        <p>English Tutor</p>
-                    </div>
+<!-- Main Content -->
+<div class="container text-center mt-5">
+    <h1 class="text-center mb-4">Meet the Team</h1>
+    <p class="lead text-center">Our team consists of highly qualified and passionate tutors dedicated to your success.</p>
+    
+    <div class="row mt-5">
+        <!-- Team Member 1 -->
+        <div class="col-md-4">
+            <div class="card shadow-sm">
+                <img src="images/team1.jpg" class="card-img-top" alt="Team Member 1">
+                <div class="card-body text-center">
+                    <h3 class="card-title">John Doe</h3>
+                    <p>Math Specialist</p>
                 </div>
             </div>
         </div>
-    </section>
+
+        <!-- Team Member 2 -->
+        <div class="col-md-4">
+            <div class="card shadow-sm">
+                <img src="images/team2.jpg" class="card-img-top" alt="Team Member 2">
+                <div class="card-body text-center">
+                    <h3 class="card-title">Jane Smith</h3>
+                    <p>Science Expert</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Team Member 3 -->
+        <div class="col-md-4">
+            <div class="card shadow-sm">
+                <img src="images/team3.jpg" class="card-img-top" alt="Team Member 3">
+                <div class="card-body text-center">
+                    <h3 class="card-title">Michael Lee</h3>
+                    <p>English Tutor</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
+<!-- Footer -->
+<footer class="bg-primary text-white text-center py-3 mt-5">
+    <p>&copy; 2023 Smart Step Tutoring. All Rights Reserved.</p>
+</footer>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
