--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         /* General Body Styling */
         body {
-            background: linear-gradient(to right, #6a11cb, #2575fc);
+            background: linear-gradient(to right, #007bff, #00c6ff);
             color: white;
             font-family: 'Arial', sans-serif;
         }
@@ -21,6 +21,7 @@
             width: 100%;
             z-index: 10;
             background-color: rgba(0, 0, 0, 0.8);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* Subtle glow effect */
         }
 
         .navbar .nav-btn {
@@ -33,15 +34,15 @@
 
         .navbar .nav-btn:hover {
             background-color: white;
-            color: #6a11cb;
+            color: #007bff;
         }
 
-        /* Page Header */
+        /* Header Section */
         h1 {
-            font-size: 3rem;
+            font-size: 3.5rem;
             font-weight: bold;
             text-transform: uppercase;
-            margin: 80px 0 20px;
+            margin: 100px 0 20px; /* Adjusted margin to create space from navbar */
             letter-spacing: 2px;
             text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
         }
@@ -50,6 +51,15 @@
             font-size: 1.5rem;
             margin-bottom: 40px;
             text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
+        }
+
+        /* Decorative Line Below Header */
+        .divider {
+            width: 100px;
+            height: 5px;
+            background: white;
+            margin: 20px auto 40px;
+            border-radius: 50px;
         }
 
         /* Cards */
@@ -69,14 +79,14 @@
         }
 
         .card:hover {
-            transform: scale(1.05);
-            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.2);
+            transform: scale(1.08);
+            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.3);
         }
 
         .card-title {
             font-size: 1.8rem;
             font-weight: bold;
-            color: #6a11cb;
+            color: #007bff;
         }
 
         /* Footer */
@@ -119,6 +129,7 @@
 <div class="container text-center">
     <section class="content-section">
         <h1 class="mt-5">What We Offer</h1>
+        <div class="divider"></div>
         <p class="lead">Explore our comprehensive tutoring services designed to help you excel in your academic journey.</p>
         <div class="row justify-content-center">
             <!-- Math Card -->
