--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
             background: linear-gradient(to right, #007bff, #00c6ff);
             color: white;
             font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
         }
 
         /* Navigation Bar */
@@ -20,21 +22,40 @@
             top: 0;
             width: 100%;
             z-index: 10;
-            background-color: rgba(0, 0, 0, 0.8);
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* Subtle glow effect */
+            background-color: rgba(0, 0, 0, 0.85);
+            padding: 10px 0;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
         }
 
-        .navbar .nav-btn {
+        .navbar-brand {
+            display: flex;
+            align-items: center;
+            margin-left: 20px;
+        }
+
+        .navbar-brand img {
+            height: 40px;
+            margin-right: 10px;
+        }
+
+        .navbar-nav {
+            margin-left: auto; /* Pushes buttons to the right */
+            margin-right: 20px;
+        }
+
+        .nav-item .nav-btn {
             border: 2px solid white;
             color: white;
             font-weight: bold;
             padding: 8px 16px;
-            transition: background-color 0.3s ease, color 0.3s ease;
+            border-radius: 20px;
+            transition: background-color 0.3s ease, color 0.3s ease, transform 0.3s ease;
         }
 
-        .navbar .nav-btn:hover {
+        .nav-item .nav-btn:hover {
             background-color: white;
             color: #007bff;
+            transform: scale(1.05);
         }
 
         /* Header Section */
@@ -42,7 +63,7 @@
             font-size: 3.5rem;
             font-weight: bold;
             text-transform: uppercase;
-            margin: 100px 0 20px; /* Adjusted margin to create space from navbar */
+            margin: 120px 0 20px; /* Adjusted margin to create space from navbar */
             letter-spacing: 2px;
             text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
         }
@@ -103,12 +124,15 @@
 
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand" href="#">Smart Step Tutoring</a>
+    <a class="navbar-brand" href="#">
+        <img src="images/logo.png" alt="Logo">
+        Smart Step Tutoring
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav">
             <li class="nav-item">
                 <button class="btn nav-btn" onclick="window.location.href='index.html'">What We Offer</button>
             </li>
