--- a/index.html
+++ b/index.html
@@ -38,9 +38,18 @@
             margin-right: 10px;
         }
 
+        /* Flexbox Layout for Navbar */
+        .navbar-collapse {
+            display: flex;
+            justify-content: flex-end; /* Pushes navigation buttons to the right */
+        }
+
+        /* Remove bullet points from navbar items */
         .navbar-nav {
-            margin-left: auto; /* Pushes buttons to the right */
-            margin-right: 20px;
+            display: flex;
+            justify-content: flex-end;
+            list-style-type: none; /* Remove bullet points */
+            padding-left: 0; /* Ensure no padding on the left */
         }
 
         .nav-item .nav-btn {
@@ -134,9 +143,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <button 
-                    class="btn nav-btn" 
-                    onclick="preventReload('index.html')">What We Offer</button>
+                <button class="btn nav-btn" onclick="window.location.href='index.html'">What We Offer</button>
             </li>
             <li class="nav-item">
                 <button class="btn nav-btn" onclick="window.location.href='team.html'">Meet the Team</button>
@@ -200,19 +207,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-<script>
-    // Prevent page reload for "What We Offer" button if already on the same page
-    function preventReload(page) {
-        const currentPage = window.location.pathname.split('/').pop(); // Get the current page
-        if (currentPage === page) {
-            console.log('You are already on this page!'); // Optional debug message
-            return false; // Prevent the button from performing an action
-        } else {
-            window.location.href = page; // Navigate if it's a different page
-        }
-    }
-</script>
 
 </body>
 </html>
