--- a/team.html
+++ b/team.html
@@ -123,6 +123,11 @@
             margin-top: 30px;
             text-align: center;
         }
+
+        /* Add padding to the top of the content to account for the fixed navbar */
+        .main-content {
+            padding-top: 120px; /* Adjusted to create space between the navbar and content */
+        }
     </style>
 </head>
 <body>
@@ -155,7 +160,7 @@
 </nav>
 
 <!-- Main Content -->
-<div class="container text-center mt-5">
+<div class="container text-center main-content">
     <h1 class="text-center mb-4">Meet the Team</h1>
     <div class="divider"></div>
     <p class="lead">Our team consists of highly qualified and passionate tutors dedicated to your success.</p>
