--- a/app.html
+++ b/app.html
@@ -11,21 +11,84 @@
             background: linear-gradient(to right, #007bff, #00c6ff);
             color: white;
             font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
         }
 
+        /* Navigation Bar */
+        .navbar {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 10;
+            background-color: rgba(0, 0, 0, 0.85);
+            padding: 10px 0;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+        }
+
+        .navbar-brand {
+            display: flex;
+            align-items: center;
+            margin-left: 20px;
+        }
+
+        .navbar-brand img {
+            height: 40px;
+            margin-right: 10px;
+        }
+
+        .navbar-collapse {
+            display: flex;
+            justify-content: flex-end;
+        }
+
+        .navbar-nav {
+            display: flex;
+            justify-content: flex-end;
+            list-style-type: none;
+            padding-left: 0;
+        }
+
+        .nav-item .nav-btn {
+            border: 2px solid white;
+            color: white;
+            font-weight: bold;
+            padding: 8px 16px;
+            border-radius: 20px;
+            transition: background-color 0.3s ease, color 0.3s ease, transform 0.3s ease;
+        }
+
+        .nav-item .nav-btn:hover {
+            background-color: white;
+            color: #007bff;
+            transform: scale(1.05);
+        }
+
+        /* Header Section */
         h1 {
-            font-size: 3rem;
+            font-size: 3.5rem;
             font-weight: bold;
             text-transform: uppercase;
+            margin: 120px 0 20px;
             letter-spacing: 2px;
-            margin-bottom: 20px;
+            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
         }
 
         .lead {
             font-size: 1.5rem;
             margin-bottom: 40px;
+            text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
         }
 
+        .divider {
+            width: 100px;
+            height: 5px;
+            background: white;
+            margin: 20px auto 40px;
+            border-radius: 50px;
+        }
+
+        /* Cards for App Features */
         .card {
             background: white;
             color: #333;
@@ -33,11 +96,17 @@
             border-radius: 15px;
             overflow: hidden;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
+            margin-bottom: 30px;
+        }
+
+        .card img {
+            height: 200px;
+            object-fit: cover;
         }
 
         .card:hover {
-            transform: scale(1.05);
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+            transform: scale(1.08);
+            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.3);
         }
 
         .card-title {
@@ -46,8 +115,18 @@
             color: #007bff;
         }
 
+        /* Footer */
         footer {
-            background-color: #0056b3;
+            background-color: rgba(0, 0, 0, 0.9);
+            color: white;
+            padding: 20px 0;
+            margin-top: 30px;
+            text-align: center;
+        }
+
+        /* Add padding to the top of the content to account for the fixed navbar */
+        .main-content {
+            padding-top: 120px; /* Adjusted to create space between the navbar and content */
         }
     </style>
 </head>
@@ -55,7 +134,10 @@
 
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">Smart Step Tutoring</a>
+    <a class="navbar-brand" href="#">
+        <img src="images/logo.png" alt="Logo" class="d-inline-block align-top">
+        Smart Step Tutoring
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -78,8 +160,9 @@
 </nav>
 
 <!-- Main Content -->
-<div class="container text-center mt-5">
+<div class="container text-center main-content">
     <h1 class="text-center mb-4">Our Upcoming iOS App</h1>
+    <div class="divider"></div>
     <p class="lead text-center">We're excited to introduce our upcoming iOS app designed to enhance the tutoring experience for our students and instructors.</p>
     
     <div class="row mt-5">
@@ -124,12 +207,13 @@
 </div>
 
 <!-- Footer -->
-<footer class="bg-primary text-white text-center py-3">
+<footer>
     <p>&copy; 2023 Smart Step Tutoring. All Rights Reserved.</p>
 </footer>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </body>
 </html>
