--- a/team.html
+++ b/team.html
@@ -153,11 +153,17 @@
                 <button class="btn nav-btn text-white" onclick="window.location.href='app.html'">Our iOS App</button>
             </li>
             <li class="nav-item">
-                <button class="btn nav-btn text-white" onclick="window.location.href='contact.html'">Contact Us</button>
+                <button 
+                    class="btn nav-btn text-white" 
+                    onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSc5u3RFzD2xpDtPIRu9qLeh2M0w_XP9XyFFyDbbxolGkn9RmA/viewform?usp=sf_link', '_blank')"
+                >
+                    Sign Up
+                </button>
             </li>
         </ul>
     </div>
 </nav>
+
 
 <!-- Main Content -->
 <div class="container text-center main-content">
