--- a/app.html
+++ b/app.html
@@ -135,7 +135,7 @@
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <a class="navbar-brand" href="#">
-        <img src="images/logo.png" alt="Logo" class="d-inline-block align-top">
+        <img src="images/Logo.png" alt="Logo" class="d-inline-block align-top">
         Smart Step Tutoring
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
