--- a/app.html
+++ b/app.html
@@ -135,7 +135,7 @@
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <a class="navbar-brand" href="#">
-        <img src="images/Logo.png" alt="Logo" class="d-inline-block align-top">
+        <img src="images/Logo.jpg" alt="Logo" class="d-inline-block align-top">
         Smart Step Tutoring
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -178,7 +178,7 @@
                 <div class="card-body text-center">
                     <h3 class="card-title">Personalized Schedules</h3>
                     <p class="card-text">Easily view and manage your tutoring sessions and lesson schedules directly through our app. Stay organized and never miss an important session.</p>
-                    <img src="images/schedule_mockup.jpg" alt="Schedule Feature Mockup" class="img-fluid">
+                    <img src="images/calendar.jpeg" alt="Schedule Feature Mockup" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -189,7 +189,7 @@
                 <div class="card-body text-center">
                     <h3 class="card-title">Integrated Development Environment (IDE)</h3>
                     <p class="card-text">We're working on an in-app IDE that allows students to write, test, and debug code with real-time feedback. Ideal for learning programming and enhancing technical skills.</p>
-                    <img src="images/ide_mockup.jpg" alt="IDE Feature Mockup" class="img-fluid">
+                    <img src="images/IDE.jpeg" alt="IDE Feature Mockup" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -200,7 +200,7 @@
                 <div class="card-body text-center">
                     <h3 class="card-title">Interactive Chatbot</h3>
                     <p class="card-text">Need help or have questions? Our chatbot will be available 24/7 to provide instant answers, offer resources, and help guide you through your studies.</p>
-                    <img src="images/chatbot_mockup.jpg" alt="Chatbot Feature Mockup" class="img-fluid">
+                    <img src="images/chatbot.jpeg" alt="Chatbot Feature Mockup" class="img-fluid">
                 </div>
             </div>
         </div>
