--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg">
     <a class="navbar-brand" href="#">
-        <img src="images/logo.png" alt="Logo">
+        <img src="images/Logo.jpg" alt="Logo">
         Smart Step Tutoring
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -165,7 +165,7 @@
             <!-- Math Card -->
             <div class="col-md-4">
                 <div class="card shadow-sm">
-                    <img src="images/kids_math.jpg" alt="Kids Learning Math" class="card-img-top">
+                    <img src="images/mathkids.jpeg" alt="Kids Learning Math" class="card-img-top">
                     <div class="card-body">
                         <h3 class="card-title">Math</h3>
                         <p>Master everything from basic arithmetic to advanced calculus with personalized support.</p>
@@ -175,7 +175,7 @@
             <!-- Science Card -->
             <div class="col-md-4">
                 <div class="card shadow-sm">
-                    <img src="images/kids_science.jpg" alt="Kids Doing Science" class="card-img-top">
+                    <img src="images/sciencekids.jpeg" alt="Kids Doing Science" class="card-img-top">
                     <div class="card-body">
                         <h3 class="card-title">Science</h3>
                         <p>Delve into Biology, Chemistry, and Physics with expert guidance and tailored resources.</p>
@@ -185,7 +185,7 @@
             <!-- English Card -->
             <div class="col-md-4">
                 <div class="card shadow-sm">
-                    <img src="images/kids_english.jpg" alt="Kids Reading Books" class="card-img-top">
+                    <img src="images/book.jpeg" alt="Kids Reading Books" class="card-img-top">
                     <div class="card-body">
                         <h3 class="card-title">English</h3>
                         <p>Enhance your literacy, comprehension, and writing skills for long-term success.</p>
