--- a/team.html
+++ b/team.html
@@ -135,7 +135,7 @@
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <a class="navbar-brand" href="#">
-        <img src="images/logo.png" alt="Logo" class="d-inline-block align-top">
+        <img src="images/Logo.jpg" alt="Logo" class="d-inline-block align-top">
         Smart Step Tutoring
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -175,10 +175,10 @@
         <!-- Team Member 1 -->
         <div class="col-md-4">
             <div class="card shadow-sm">
-                <img src="images/team1.jpg" class="card-img-top" alt="Team Member 1">
+                <img src="images/Headshot.jpeg" class="card-img-top" alt="Team Member 1">
                 <div class="card-body text-center">
-                    <h3 class="card-title">John Doe</h3>
-                    <p>Math Specialist</p>
+                    <h3 class="card-title">Omar Habli</h3>
+                    <p>Honors Purdue Computer Engineering Student</p>
                 </div>
             </div>
         </div>
@@ -186,21 +186,10 @@
         <!-- Team Member 2 -->
         <div class="col-md-4">
             <div class="card shadow-sm">
-                <img src="images/team2.jpg" class="card-img-top" alt="Team Member 2">
+                <img src="images/rayaneheadshot.jpg" class="card-img-top" alt="Team Member 2">
                 <div class="card-body text-center">
-                    <h3 class="card-title">Jane Smith</h3>
-                    <p>Science Expert</p>
-                </div>
-            </div>
-        </div>
-
-        <!-- Team Member 3 -->
-        <div class="col-md-4">
-            <div class="card shadow-sm">
-                <img src="images/team3.jpg" class="card-img-top" alt="Team Member 3">
-                <div class="card-body text-center">
-                    <h3 class="card-title">Michael Lee</h3>
-                    <p>English Tutor</p>
+                    <h3 class="card-title">Rayane Habli</h3>
+                    <p>Honors William Mason High School Student</p>
                 </div>
             </div>
         </div>
