--- a/index.html
+++ b/index.html
@@ -6,6 +6,65 @@
     <title>What We Offer - Smart Step Tutoring</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-auth.js"></script>
+    <script>
+        // Firebase configuration
+        const firebaseConfig = {
+            apiKey: "YOUR_API_KEY",
+            authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
+            projectId: "YOUR_PROJECT_ID",
+            storageBucket: "YOUR_PROJECT_ID.appspot.com",
+            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
+            appId: "YOUR_APP_ID"
+        };
+
+        // Initialize Firebase
+        const app = firebase.initializeApp(firebaseConfig);
+        const auth = firebase.auth();
+
+        // Sign In with Google
+        function signInWithGoogle() {
+            const provider = new firebase.auth.GoogleAuthProvider();
+            auth.signInWithPopup(provider)
+                .then((result) => {
+                    updateSignInStatus(result.user);
+                })
+                .catch((error) => {
+                    console.error("Error signing in: ", error);
+                });
+        }
+
+        // Sign Out
+        function signOut() {
+            auth.signOut().then(() => {
+                updateSignInStatus(null);
+            }).catch((error) => {
+                console.error("Error signing out: ", error);
+            });
+        }
+
+        // Update Sign-In Status
+        function updateSignInStatus(user) {
+            const signInStatus = document.getElementById("sign-in-status");
+            if (user) {
+                signInStatus.classList.remove("btn-danger");
+                signInStatus.classList.add("btn-success");
+                signInStatus.textContent = "Signed In";
+                signInStatus.onclick = signOut;
+            } else {
+                signInStatus.classList.remove("btn-success");
+                signInStatus.classList.add("btn-danger");
+                signInStatus.textContent = "Not Signed In";
+                signInStatus.onclick = signInWithGoogle;
+            }
+        }
+
+        // Check Sign-In Status on Page Load
+        auth.onAuthStateChanged((user) => {
+            updateSignInStatus(user);
+        });
+    </script>
     <style>
         /* General Body Styling */
         body {
@@ -70,7 +129,7 @@
             font-size: 3.5rem;
             font-weight: bold;
             text-transform: uppercase;
-            margin: 160px 0 20px; /* Adjusted margin for more space from navbar */
+            margin: 160px 0 20px;
             letter-spacing: 2px;
             text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
         }
@@ -127,37 +186,38 @@
     </style>
 </head>
 <body>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand" href="#">
+            <img src="images/Logo.jpg" alt="Logo">
+            Smart Step Tutoring
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <button class="btn nav-btn" onclick="window.location.href='index.html'">What We Offer</button>
+                </li>
+                <li class="nav-item">
+                    <button class="btn nav-btn" onclick="window.location.href='team.html'">Meet the Team</button>
+                </li>
+                <li class="nav-item">
+                    <button class="btn nav-btn" onclick="window.location.href='app.html'">Our iOS App</button>
+                </li>
+                <li class="nav-item">
+                    <button class="btn nav-btn" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSc5u3RFzD2xpDtPIRu9qLeh2M0w_XP9XyFFyDbbxolGkn9RmA/viewform?usp=sf_link', '_blank')">Sign Up</button>
+                </li>
+                <li class="nav-item">
+                    <button id="sign-in-status" class="btn btn-danger">Not Signed In</button>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-<!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand" href="#">
-        <img src="images/Logo.jpg" alt="Logo">
-        Smart Step Tutoring
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <button class="btn nav-btn" onclick="window.location.href='index.html'">What We Offer</button>
-            </li>
-            <li class="nav-item">
-                <button class="btn nav-btn" onclick="window.location.href='team.html'">Meet the Team</button>
-            </li>
-            <li class="nav-item">
-                <button class="btn nav-btn" onclick="window.location.href='app.html'">Our iOS App</button>
-            </li>
-            <li class="nav-item">
-                <button class="btn nav-btn" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSc5u3RFzD2xpDtPIRu9qLeh2M0w_XP9XyFFyDbbxolGkn9RmA/viewform?usp=sf_link', '_blank')">Sign Up</button>
-            </li>
-        </ul>
-    </div>
-</nav>
-
-<!-- Main Content -->
-<div class="container text-center">
-    <section class="content-section">
+    <!-- Main Content -->
+    <div class="container text-center">
         <h1 class="mt-5">What We Offer</h1>
         <div class="divider"></div>
         <p class="lead">Explore our comprehensive tutoring services designed to help you excel in your academic journey.</p>
@@ -188,22 +248,16 @@
                     <img src="images/book.jpeg" alt="Kids Reading Books" class="card-img-top">
                     <div class="card-body">
                         <h3 class="card-title">English</h3>
-                        <p>Enhance your literacy, comprehension, and writing skills for long-term success.</p>
+                        <p>Improve your reading, writing, and communication skills with one-on-one coaching.</p>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-</div>
+    </div>
 
-<!-- Footer -->
-<footer>
-    <p>&copy; 2023 Smart Step Tutoring. All Rights Reserved.</p>
-</footer>
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 Smart Step Tutoring. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
