--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <script>
         // Firebase configuration
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_PROJECT_ID.appspot.com",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID"
+            apiKey: "AIzaSyCHM_cp8V47VfEUOgILuGOGqZhBVrETo78",
+            authDomain: "smartstep-tutoring.firebaseapp.com",
+            projectId: "smartstep-tutoring",
+            storageBucket: "smartstep-tutoring.appspot.com",
+            messagingSenderId: "954948229054",
+            appId: "1:954948229054:web:ed6166b2fe3797795b4bef"
         };
 
         // Initialize Firebase
