--- a/index.html
+++ b/index.html
@@ -259,5 +259,9 @@
     <footer>
         <p>&copy; 2024 Smart Step Tutoring. All Rights Reserved.</p>
     </footer>
+
+    <!-- Include necessary scripts for Bootstrap -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
